--- a/bootstarp/css/boot.css
+++ b/bootstarp/css/boot.css
@@ -111,6 +111,7 @@ header  .dh  li a:hover{
  .nr .xm .s{
      width: 100%;
      height: 35%;
+     background-size: 100% 100%;
  }
  .nr .xm .s a{
     display: block;
@@ -214,6 +215,7 @@ header  .dh  li a:hover{
     header .dh li:first-child{
        display: block;
        width: 34%;
+       font-size: 16px;
     }
     header .dh li a:hover{
         color: seashell;
