--- a/bysj/css/lyql.css
+++ b/bysj/css/lyql.css
@@ -7,9 +7,9 @@ body{
 #lybj{
 	width: 100%;
 	height: 747px;
-	background: url("../images/timg.jpg");
-	background-repeat:repeat;
+	background: url("../images/timg.png");
 	overflow: hidden;
+	position: relative;
 }
 #ly{
 	width: 310px;
@@ -102,9 +102,8 @@ body{
 	background: #DBD8D8;
 	border-radius: 20px;
 	position: fixed;
-	top: 0;
+	top: 150px;
 	right: 0;
-	bottom: 0;
 	left:0;
 	margin: auto;
 	z-index: 2;
@@ -122,6 +121,7 @@ body{
 	border: #40E1E2 2px solid;
 }
 #bd form :nth-child(2) textarea{
+	width: 90%;
 	border-radius: 10px;
 }
 #bd form :nth-child(2) textarea:focus{
