--- a/bysj/css/lzs_index.css
+++ b/bysj/css/lzs_index.css
@@ -81,7 +81,7 @@ body{
 #cd{
 	display: none;
 	width: 22%;
-	height:750px;
+	height: 750px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -147,25 +147,22 @@ body{
 	z-index: 2;
 }
 main{
-	background:url("../images/u=318671592,655222009&fm=16&gp=0.gif")no-repeat;
+	background:url("../images/u=318671592,655222009&fm=16&gp=0.gif") no-repeat;
 	background-size: cover;
 	width: 100%;
-	height: 24rem;
-	position: relative;
+	height: auto;
+	overflow: hidden;
 }
 main ul{
-	display: inline-block;
 	width: 5rem;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 10px;
-	margin: auto;
+	height: auto;
+	margin:1.8rem auto;
 }
 main ul li{
 	height: 1rem;
-	background: #EBE8E8;
-	margin-top: 0.3rem;
+	background:black;
+	opacity: 0.6;
+	margin-top: 0.5rem;
 	list-style: none;
 	border-radius: 0.2rem;
 }
@@ -175,8 +172,8 @@ main ul li:hover{
 main ul label{
 	display: block;
 	font-size: 0.25rem;
-	color:#1B6ACD;
-	margin-top: 0.1rem;
+	color:#0754b1;
+	margin-top: 1.5rem;
 	margin-left: -0.3rem;
 }
 main ul li a{
@@ -187,17 +184,17 @@ main ul li a{
 	line-height: 1rem;
 	text-align: center;
 	font-size: 0.3rem;
-	color:#000000;
+	color: #e4ecec;
 }
 a:hover{
-	color:#4E4848;
-	font-size:0.25rem;
+	color:#2e55d6;
+	font-size: 0.3rem;
 }
 footer{
 	background: #181717;
 	width: 100%;
-	height: 1rem;
-	line-height: 1rem;
+	height: 1.8rem;
+	line-height: 1.8rem;
 	color: aliceblue;
 	text-align: center;
 	overflow: hidden;
