--- a/bysj/css/lzs_index.css
+++ b/bysj/css/lzs_index.css
@@ -193,8 +193,9 @@ a:hover{
 footer{
 	background: #181717;
 	width: 100%;
-	height: 1.8rem;
-	line-height: 1.8rem;
+	height: 2.5rem;
+	line-height: 2.5rem;
+	font-size: 0.5rem;
 	color: aliceblue;
 	text-align: center;
 	overflow: hidden;
