--- a/hospital/css/hospital.css
+++ b/hospital/css/hospital.css
@@ -650,7 +650,7 @@ footer{
    }
    .shjb-5{
        width: 100%;
-       height: 350px;
+       height: 270px;
        clear: both;
        display: block;
    }
@@ -664,13 +664,14 @@ footer{
        display: block;
    }
    .ztl a .cd{
-       width: 12%;
+       width: 13%;
        height: 100%;
        float: left;
        background: rgb(38, 72, 165);
        font-family: 'ztl';
        font-size: 3em;
        color: beige;
+       text-aligin:center;
        line-height: 80px;
        border-radius: 5px;
    }
