--- a/vicor/css/public.css
+++ b/vicor/css/public.css
@@ -2,8 +2,12 @@ header{
     width: 100%;
     height: 0.88rem;
     text-align: center;
-    position: relative;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
     border-bottom:#c3c9c9 1px solid;
+    background: #ffffff;
 }
 header img{
     width: 0.92rem;
